src/objects/AMPSync_Queue__c.object
<CustomObject>
    <fields>
        <fullName>DML_Operation__c</fullName>
        <label>DML Operation</label>
        <picklist>
            <picklistValues>
                <fullName>Insert</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Delete</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Update</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Create</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>IsSynced__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsSynced</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>JSONData__c</fullName>
        <label>JSONData</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Last_Sync_DateTime__c</fullName>
        <label>Last Sync DateTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ObjectId__c</fullName>
        <externalId>true</externalId>
        <label>Object Record Id</label>
        <length>25</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Object_Name_Link__c</fullName>
        <formula>HYPERLINK(&apos;/&apos;+ObjectId__c, Object_Name__c , &apos;_self&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Object Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Object_Name__c</fullName>
        <label>Object Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Pending</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Success</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Sync_Failure_Reason__c</fullName>
        <label>Pending Reason</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>AMPSync Queue</label>
    <nameField>
        <displayFormat>SQ-{00000000}</displayFormat>
        <label>Queue Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>AMPSync Queue</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>